# Low-Level-Design

./: .gitignore  CMakeLists.txt  ReadMe.md
1.SolidPrinciples/: ReadMe.md
1.SolidPrinciples/2.OpenCloseprinciple/: Incorrect.cpp  ReadMe.md
1.SolidPrinciples/OpenCloseprinciple/: Correct.cpp  ReadMe.md
1.SolidPrinciples/SingleResponsibility/: CMakeLists.txt  Correct.cpp  Incorrect.cpp  ReadMe.md
2.Strategy/WithStrategy/: CMakeLists.txt
2.Strategy/WithStrategy/include/: OffRoadCar.h  PassengerCar.h  SportsCar.h  Vehicle.h
2.Strategy/WithStrategy/include/DriveStrategy/: DriveStrategy.h  NormalDrive.h  SportsDrive.h
2.Strategy/WithStrategy/src/: NormalDrive.cpp  PassengerCar.cpp  SportsCar.cpp  SportsDrive.cpp  Vehicle.cpp  main.cpp
2.Strategy/WithoutStrategy/: CMakeLists.txt
2.Strategy/WithoutStrategy/include/: PassengerCar.h  SportsCar.h  Vehicle.h
2.Strategy/WithoutStrategy/src/: PassengerCar.cpp  SportsCar.cpp  Vehicle.cpp  main.cpp
3.Observer/: ReadMe.md
3.Observer/ObserverPattern/: CMakeLists.txt
3.Observer/ObserverPattern/include/: CCricketObservable.h  CEmailObserver.h  CMobileObserver.h  CProductObservable.h  IObservable.h  IObserver.h
3.Observer/ObserverPattern/src/: CCricketObservable.cpp  CEmailObserver.cpp  CMobileObserver.cpp  CProductObservable.cpp  main.cpp
